# ttf2mesh_triangulation

./: .gitignore  Cargo.toml  README.md
examples/: polygon_builder.rs  viewer.rs
src/: lib.rs  linked_list.rs  mesher.rs  triangulation.rs  triangulator.rs  vec2.rs
src/test/: mod.rs
test_gen/: CMakeLists.txt  ttf2mesh_test_data_gen.c
test_gen/fonts/xano/: license.txt
